# imager

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_imager.sh  pacerimagerlib.pc.in  run_all.sh  runtime.sh
apps/: a.out  cufft_blocks.cpp  cufft_blocks.cpp~  fftw_blocks.cpp  fftw_blocks.cpp~  generator.cpp  lfile_imager_test.cpp  main_test.cpp  main_test.cpp~  pacer_imager_main.cpp  pacer_imager_main.cpp~  pacer_imager_multi.cpp  pacer_imager_multi.cpp~  pacer_imager_test.cpp
apps/test_calsol/: main.cpp
benchmarks/: benchmark_gpu.sh  benchmark_multi_buffer.sh  benchmark_multi_buffer_fftw.sh  benchmark_multi_buffer_fftw.sh~  benchmark_multi_buffer_full.sh  benchmark_multi_buffer_full_fftw.sh  benchmark_multi_buffer_full_fftw.sh~
config/eda2/: instr_config.txt
data/eda2/20200209/: calsol_merged.txt  chan_204_20200209T034646_vis_imag.fits  chan_204_20200209T034646_vis_real.fits  dirty_image_imag.fits  dirty_image_real.fits
data/mwa/1103645160/: 1103645160.metafits  1103645160_vis_imag_channel000_time000000.fits  1103645160_vis_real_channel000_time000000.fits
data/mwa/1103645160/images/: dirty_image_imag.fits  dirty_image_real.fits
data/mwa/simul/hydra/: metadata.txt  (+3 more)
data/topaz/test1_eda2/: 20191104_033537_eda2_ch1_ant256_midday_avg1_vis_imag_channel000_time000000.fits  20191104_033537_eda2_ch1_ant256_midday_avg1_vis_real_channel000_time000000.fits  dirty_image_20220406T035747506_imag_TEMPLATE_512x512.fits  dirty_image_20220406T035747506_real_TEMPLATE_512x512.fits  doit!  doit_topaz!  scp.sh
data/topaz/test2_eda2/: README.txt  doit!
data/topaz/test3_eda2/: README.txt  doit!
experiments/: compare_blink_images.sh  image_casa_dumps.sh  image_casa_dumps.sh~  image_casa_dumps_allsky.sh  image_casa_dumps_allsky.sh~  image_casa_dumps_alltimes.sh  image_casa_dumps_alltimes.sh~  image_casa_dumps_centerfreq.sh  image_casa_dumps_centerfreq.sh~  image_casa_dumps_perfreq.sh  image_casa_dumps_perfreq.sh~  image_casa_dumps_perfreq_gpu.sh  image_casa_dumps_perfreq_gpu.sh~
scripts/: add_fits_header.py  dump_uvfits_channels.sh  eda2_calibration.py  get_corrmatrix_from_casa.py  pacer_imager.sh  pacer_imager_many.sh  pacer_imager_many_channels.sh  process_all_lfiles_setonix.sh  process_all_lfiles_setonix.sh~  process_lfile.sh  process_lfiles_split.sh  process_lfiles_split.sh~  process_list_lfiles_setonix.sh  process_list_lfiles_setonix.sh~  process_list_lfiles_setonix_gpu.sh  process_list_lfiles_setonix_gpu.sh~
scripts/cal/: aocal.py  parse_solutions.sh
scripts/candidates/: merge_candidates.sh  merge_candidates_new.sh  my_friends_of_friends_general.py  pawsey_merge_candidates.sh
scripts/casa/: dump_corr_matrix_gara.sh  dump_corr_matrix_gara.sh~  eda2_calibration.py  get_corr_matrix.sh  get_corr_matrix.sh~  get_corrmatrix_from_casa.py
scripts/eda2/: link_lfiles.sh  process_lfiles_eda2.sh  process_lfiles_eda2_all.sh
scripts/eda2/fix_header/: README.txt  setkey_2023_06_01_eda2_10min_ch294.py
scripts/hpc/setonix/: submit_lfile_imager_setonix.sh  submit_lfile_imager_setonix_all.sh  submit_test_eda2_setonix.sh  submit_test_mwa_setonix.sh  submit_test_mwa_setonix.sh~
scripts/hpc/topaz/: submit_test_eda2_topaz.sh  submit_test_mwa_topaz.sh
scripts/mwa/: compare_casa2gpufits.py  get_corrmatrix_from_casa.py  gpubox2corrmatrix.py  gpubox_finder.py  mapping_finder.py  mapping_finder_inverse.py  mapping_finder_inverse_pol0.py  mapping_finder_inverse_pol1.py  mapping_finder_inverse_pol2.py  mapping_finder_inverse_pol3.py  mapping_finder_pol12.py  read_fits_reim_pol.py
scripts/simul/: mwa_ant.cfg  mwa_antenna_locations.txt  mwa_metadata.txt  pacer_test.sh  simul_mwa.py  simul_mwa_hyda154MHz.sh  simul_mwa_hyda154MHz.sh~
scripts/simul/HydA_154.88MHz.im/: table.f0  table.f0_TSM0
scripts/tests/phase_corrections/: 20200619163000.metafits  cotter_cable_corr_only.sh  cotter_cable_geom_corr.sh  cotter_cable_geom_corr_applycal.sh  cotter_geom_corr_only.sh  cotter_nocorrections.sh
scripts/utils/: get_dynaspec.sh  get_events.sh  get_single_event.sh  read_fits.py  read_fits_reim.py
scripts/utils/wcs/: fitsname.py  pawsey_fix_wcs.sh  pix2sky.py  setkey.py
src/: a.out  antenna_positions.cpp  antenna_positions.h  apply_calibration.cpp  apply_calibration.cpp~  apply_calibration.h  apply_calibration.h~  corrections.cpp  corrections.h  files.cpp  files.hpp  gridding.hpp  image_analyser.cpp  image_analyser.cpp~  image_analyser.h  images.cpp  images.hpp  observation_metadata.cpp  observation_metadata.h  pacer_common.cpp  pacer_common.h  pacer_geometry.h  pacer_imager.cpp  pacer_imager.cpp_LAMBDA_DIV  pacer_imager.cpp~  pacer_imager.h  pacer_imager.h~  pacer_imager_defs.h  pacer_imager_defs.h~  pacer_imager_parameters.cpp  pacer_imager_parameters.cpp~  pacer_imager_parameters.h  pacer_imager_parameters.h~  pacer_imager_thread.cpp  pacer_imager_thread.h  realtime_image_analyser.cpp  realtime_image_analyser.h  test.cpp  test.cpp~  utils.cpp  (+1 more)
src/gpu/: corrections_gpu.cpp  gpu_utils.cpp  gridding_gpu.cpp  gridding_gpu.h  pacer_imager_hip.cpp  pacer_imager_hip.h  pacer_imager_hip_defines.h
src/hip/: corrections_gpu.cpp  corrections_gpu.h  gpu_utils.cpp  gpu_utils.h  gridding_gpu.cpp  gridding_gpu.h  gridding_imaging_cuda.cpp  gridding_imaging_cuda.cpp~  gridding_imaging_cuda.h  gridding_imaging_cuda.h~  gridding_multi_image_cuda.cpp  gridding_multi_image_cuda.h  pacer_imager_hip.cpp  pacer_imager_hip.cpp~  pacer_imager_hip.h  pacer_imager_hip.h~  pacer_imager_hip_defines.h  pacer_imager_multi_hip.cpp  pacer_imager_multi_hip.cpp~  pacer_imager_multi_hip.h
tests/: blink_test_cufft_blocks.sh  blink_test_cufft_blocks_all.sh  blink_test_cufft_blocks_all_tests.sh  blink_test_eda2_data_20200209.sh  blink_test_eda2_data_20221216.sh  blink_test_eda2_data_20221216_gpu_n1.sh  blink_test_eda2_data_20221216_gpu_n2.sh  blink_test_fftw_blocks.sh  blink_test_fftw_blocks_all.sh  blink_test_fftw_blocks_all_tests.sh  blink_test_mwa_data_obsid1103645160.sh  blink_test_mwa_simul_hydra.sh  common.hpp  conv_test.cpp  corrections_test.cpp  gpu_utils_test.cpp  gridding_test.cpp  imager_test.cpp
(+58 files in other folders)
